apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/a1-RollingUpdate-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: default
  annotations:
    kubernetes.io/change-cause: "change reason goes here"
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
    # maxUnavailable: 2
    # maxSurge: 2
  replicas: 16
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: aputra/myapp-171:v2
          ports:
            - name: http
              containerPort: 8181
          startupProbe:
            tcpSocket:
              port: 8181
            initialDelaySeconds: 20   # to delay a bit
            periodSeconds: 5
          resources: {}
