apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/b1-Recreate-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: default
  annotations:
    kubernetes.io/change-cause: "change reason goes here"
spec:
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  replicas: 8
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: aputra/myapp-171:v1
          ports:
            - name: http
              containerPort: 8181
          startupProbe:
            tcpSocket:
              port: 8181
            initialDelaySeconds: 20   # to delay a bit
            periodSeconds: 5
          resources: {}
