apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/d2-canary-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-myapp
  namespace: default
spec:
  replicas: 10   # << this does the job
  selector:
    matchLabels:
      app: myapp    # << x1
  template:
    metadata:
      labels:
        app: myapp    # << x1
    spec:
      containers:
        - name: myapp
          image: aputra/myapp-171:v2
          ports:
            - name: http
              containerPort: 8181
          startupProbe:
            tcpSocket:
              port: 8181
            initialDelaySeconds: 20
            periodSeconds: 5
          resources: {}
