apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/y2-RK-green.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-myapp
  namespace: default
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: myapp        # <<
      replica: green    # <<
  template:
    metadata:
      labels:
        app: myapp      # <<
        replica: green  # <<
    spec:
      containers:
        - name: myapp
        # image: therafk/apache2:g
          image: therafk/httpd:2.1
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources: {}
