apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/z1-ARGO-blue.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-squares-dep-b
  namespace: argo-squares
  labels:
    app: argo-squares
    color: blue
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: argo-squares
      color: blue
  template:
    metadata:
      labels:
        app: argo-squares
        color: blue
    spec:
      containers:
      - name: argo-squares
        image: argoproj/rollouts-demo:blue
           # https://hub.docker.com/r/argoproj/rollouts-demo/tags
           # we can test autoscaler as with this settings bad-purple creates a lot of load 
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "5m"
            memory: "4Mi"
          limits:
            cpu: "10m"
            memory: "12Mi"
