apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/c3-bg-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    app: myapp      # <<
    replica: blue   # <<  blue green switch here
  ports:
    - protocol: TCP
      port: 8181
      targetPort: http
