apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/c4-bgTesting-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-testing
  namespace: default
spec:
  selector:
    app: myapp      # <<
    replica: green  # << 
  ports:
    - protocol: TCP
      port: 8181
      targetPort: http

# we can have another (green) service for testing
# before switch
