apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/d3-canary-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    app: myapp    # << x1
  ports:
    - protocol: TCP
      port: 8181
      targetPort: http
