apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/y3-RK-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    app: myapp      # <<
    replica: blue   # << this does the job - blue/green
  ports:
    - protocol: TCP
      port: 8181
      targetPort: http

# we can have another (green) service for testing
# kubectl run curl --image=alpine/curl:8.2.1 -n kube-system -i --tty --rm -- sh
# while true; do curl -s myapp.default:8181 | grep -e "--"; sleep 1; done
