apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/z3-ARGO-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-squares-svc
  namespace: argo-squares
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  selector:
    app: argo-squares
    color: blue     # << LIVE B/G   Orginal blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # 80
