apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/z4-ARGO-svcTest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-squares-svc-test
  namespace: argo-squares
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  selector:
    app: argo-squares
    color: green     # Orginal green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # 80
