apps-1/5-171-Most_Common_Kubernetes_Deployment_Strategies/z4-RK-svcTest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-testing
  namespace: default
spec:
  selector:
    app: myapp      # <<
    replica: green   # << svc used for testing
  ports:
    - protocol: TCP
      port: 8181
      targetPort: http

# we can have another (green) service for testing
# kubectl run curl --image=alpine/curl:8.2.1 -n kube-system -i --tty --rm -- sh
# while true; do curl -s myapp-testing.default:8181 | grep -e "--"; sleep 1; done
